# Agent-H

./: .gitignore  pyproject.toml
agents/: README.md  basic_agent.py
docs/: BASIC_RAG_REACT_AGENT.md
memory_strategies/: sliding_window_summary.py
scripts/: run_agent.py  run_basic_react_rag_agent.py
tools/: __init__.py
tools/rag/: X_rag_tool.py  __init__.py  example_rag_tool.py  kyndryl_rag_tool.py
utils/running_agent/: interactive.py
vector-db/chunking/: base.py
vector-db/scripts/: run_chunking.py
vector_db/chunking/: base.py  pdf_chunker.py
vector_db/embedding/: embedding_manager.py
vector_db/scripts/: run_chunking.py  run_ingestion_faiss.py  run_search.py
vector_db/utils/: __init__.py
