[project]
name = "agent-h"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.0",
    "ipykernel>=7.1.0",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pymilvus>=2.6.4",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
]
